
Mon Aug 7 13:08:39 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Add check for utmp.h.  Make check for utmpx.h define
		additional symbol to work with libpty.h.
	* sys_term.c - Fix syntax error and reinstate #ifdef LINEMODE deleted
		by last checkin.

Fri Aug  4 20:22:28 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* sys_term.c (getptyslave): Select terminal settings more likely
        to work.
	(cleanup): Pass pid to cleanup so it can killpg if necessary.

Tue Aug  1 11:28:55 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* telnetd.c (doit): Use pty_getpty.

	* Makefile.in (LOCAL_LIBRARIES): Add -lpty

	* sys_term.c (startslave): Use pty_update_utmp.  Export slave's
        pid so it's global for pty_cleanup.  Use pipe to synchronize so
        that slave is opened before parent writes.
	(cleanopen): removed in favor of pty_open_slave
	(login_tty): Don't set controlling terminal; libpty does this.  Just dup2 the terminals.
	(getpty): removed.

	(getptyslave): Use libpty.

	* telnetd-ktd.c: Use libpty.

Tue Jul 11 11:32:56 1995  Sam Hartman  <hartmans@tertius.mit.edu>

Sat Jul 29 04:40:04 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>


	* telnetd-ktd.c (doit): Remove special casing of Convex PTY
        handling here.  There isn't enough code here for me to understand
        what to do on a Convex system, so if it breaks, it should be
        special cased in a more-appropriate manner.


	* configure.in: Don't link with -lkadm.

Fri Jul 7 15:51:03 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove explicit library handling.
	* configure.in - Add USE_{KRB4,KADM}_LIBRARY and KRB5_LIBRARIES.

Tue Jun 20 14:25:01 1995  Tom Yu  (tlyu@dragons-lair)

	* defs.h: NO_STRING_H -> HAVE_STRING_H

	* configure.in: add test for string.h

Thu Jun 15 17:43:21 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.